Computer Science Projects

--- a/BankingON/BankingON/index.html
+++ b/BankingON/BankingON/index.html
@@ -2,26 +2,73 @@
 
 <head>
 	<title>Welcome to Bhavin Panchani's Project</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+	<link href="animation/animate.css" rel="stylesheet">
+
+	<style>
+		.card2{
+			margin-top: 8%;
+			width: 65%;
+			background-color: ghostwhite;
+			border-radius: 10px;
+			border-width: 4px;
+			text-shadow: 1px 2px grey;
+			box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+			transition: 0.3s;
+		}
+		.card2:hover{
+			box-shadow: 0 16px 32px 0 rgba(2,0,0,0.2);	
+			background-color: lemonchiffon;
+			cursor: pointer;
+		}
+		.button:hover{
+			color:darkblue;
+		}
+
+	</style>
+
 </head>
 
 <body>
-	<center>
-		<br><br>
+	<div class="animated fadeIn">
+	<div class="animated zoomIn">
+		<div class = 'container text-center card2 animated pulse'>
+			<br>
+			<!-- <div class="tooltip2"> -->
+			<h1 class="heading animated fadeIn2">
+			<a target="_blank"> <font color = 'grey'>Welcome to Bhavin Panchani's CPS 3740 Project</font></a>
+			</h1>
+			<!-- <span class = "tooltiptext2"> Click here to go to my website</span>
+			</div> -->
+			<hr font: color = 'lightgrey' >
+			<br>
+			<h2 class="animated fadeIn3"><a class='button' href = "p1.html" target="_blank">Project 1</a></h2>
+			</br>
 
-		<h1>
-		Welcome to Bhavin Panchani's CPS 3740 Project
-		</h1>
+			<br>
+			<h2 class="animated fadeIn4"><a class='button' href = "p2.html" target="_blank">Project 2</a></h2>
+			</br>
 
-		<br>
-		<h2><a href = "p1.html" target="_blank">Project 1</a></h2>
-		</br>
+			<br>
+			<h2 class="animated fadeIn5"><a class='button' href = "display_stores.php" target="_blank">Bonus</a></h2>
+			</br>
+		</div>
+	</div>
+	</div>
+	<!-- </div>
+	<div class="tooltip bs-tooltip-top" role="tooltip">
+		<div class="arrow"></div>
+		<div class="tooltip-inner">
+		  Some tooltip text!
+		</div>
+	  </div> -->
 
-		<br>
-		<h2><a href = "p2.html" target="_blank">Project 2</a></h2>
-		</br>
 
-	</center>
-
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
